# mirofish-Lite-with-supabase-and-gemini

./: .env.example  .gitignore  README.md  start.sh  supabase_migration_3072.sql  supabase_setup.sql
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py
backend/app/api/: graph.py  report.py  simulation.py
backend/app/services/: __init__.py  oasis_profile_generator.py  ontology_generator.py  report_agent.py  simulation_config_generator.py  simulation_manager.py  simulation_runner.py  supabase_entity_reader.py  supabase_graph_builder.py  supabase_memory.py
backend/app/utils/: __init__.py  gemini_service.py  groq_service.py  llm_client.py  supabase_client.py
backend/scripts/: action_logger.py  run_parallel_simulation.py  run_reddit_simulation.py  run_twitter_simulation.py  test_camel.py
frontend/src/components/: Step2EnvSetup.vue  Step3Simulation.vue
frontend/src/store/: pendingUpload.js
frontend/src/views/: Home.vue  Process.vue
